--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="icon" type="image/x-icon" href="icon.ico">
 </head>
 <body>
-<div class="phone">
+<!-- <div class="phone">
     Under construction! Please view on a laptop or check back later! ☺
-</div>
+</div> -->
 <div class="container">
 <div class="header">
     <div class="bio">
@@ -27,7 +27,7 @@
     <div class="grid-column">
         <div class="grid-item" id="blumenhaus">
             <div class="thumbnail">
-                <a href="blumenhaus/index.html" >
+                <a href="blumenhaus/" >
                     <img class="image" src="imgs/blumenhaus/webcropped2.gif">
                     <div class="hover">
                         <span class="circle">
@@ -45,7 +45,7 @@
 
         <div class="grid-item" id="home-book">
             <div class="thumbnail">
-                <a href="home-book/index.html">
+                <a href="home-book/">
                     <img class="image" src="imgs/homebook/contents.png">
                     <div class="hover">
                         <span class="circle">
@@ -62,7 +62,7 @@
 
         <div class="grid-item" id="editorial">
             <div class="thumbnail">
-                <a href="editorial-illustration/index.html" >
+                <a href="editorial-illustration/" >
                     <img class="image" src="imgs/editorial/carpost.gif">
                     <div class="hover">
                         <span class="circle">
@@ -81,11 +81,10 @@
 
     <div class="grid-column">
 
-
         <div class="grid-item" id="to-revisit">
             <div class="thumbnail">
                 <!-- <a href="to-revisit/index.html" > -->
-                    <a href="to-revisit/index.html">
+                    <a href="to-revisit/">
                     <img class="image" src="imgs/revisit/revisit.gif">
                     <div class="hover">
                         <span class="circle">
@@ -104,7 +103,7 @@
 
         <div class="grid-item" id="chamberlain">
             <div class="thumbnail">
-                <a href="chamberlain-coffee/index.html" >
+                <a href="chamberlain-coffee/" >
                     <img class= "image" src="imgs/chamberlain/1.png">
                     <div class="hover">
                         <span class="circle">
@@ -120,7 +119,7 @@
 
     <div class="grid-item" id="mutated">
         <div class="thumbnail">
-            <a href="mutated-odyssey/index.html" >
+            <a href="mutated-odyssey/" >
                 <img class= "image" src="imgs/mutated/cover2.gif">
                 <div class="hover">
                     <span class="circle">
@@ -157,7 +156,7 @@
     <div class="grid-column">
         <div class="grid-item" id="weaving">
             <div class="thumbnail">
-                <a href="weaving/index.html" >
+                <a href="weaving/" >
                     <img class="image" src="imgs/weaving/sub2.gif">
                     <div class="hover">
                         <span class="circle">
@@ -172,7 +171,7 @@
 
         <div class="grid-item" id="stardew">
             <div class="thumbnail">
-                <a href="stardew/index.html" >
+                <a href="stardew/" >
                     <img class="image" src="imgs/stardew/cover.png">
                     <div class="hover">
                         <span class="circle">
@@ -188,7 +187,7 @@
 
         <div class="grid-item" id="macbook">
             <div class="thumbnail">
-                <a href="macbook/index.html" >
+                <a href="macbook/" >
                     <img class="image" src="imgs/escapism1/escapism1.gif">
                     <div class="hover">
                         <span class="circle">
@@ -204,11 +203,105 @@
        
     </div>
 </div>
-<div class="copyright">
-    <span id="copy">All Work On Site © Drithi Kandoor 2024 [drithikandoor@gmail.com]</span>
+
+
+
+
+
+
+<div class="grid-container-phone">
+
+    <div class="grid-column">
+        <div class="grid-item" id="blumenhaus">
+            <div class="thumbnail">
+                <a href="blumenhaus/" >
+                    <img class="image" src="imgs/blumenhaus/webcropped2.gif">
+                </a>
+            </div>
+        </div>
+
+        <div class="grid-item" id="to-revisit">
+            <div class="thumbnail">
+                    <a href="to-revisit/">
+                    <img class="image" src="imgs/revisit/revisit.gif">
+                </a>    
+            </div>
+        </div>
+
+        <div class="grid-item" id="weaving">
+            <div class="thumbnail">
+                <a href="weaving/" >
+                    <img class="image" src="imgs/weaving/sub2.gif">
+            </div>
+        </div>
+
+        <div class="grid-item" id="chamberlain">
+            <div class="thumbnail">
+                <a href="chamberlain-coffee/" >
+                    <img class= "image" src="imgs/chamberlain/1.png">
+                </a>
+        </div>
+
+        <div class="grid-item" id="mutated">
+            <div class="thumbnail">
+                <a href="mutated-odyssey/" >
+                    <img class= "image" src="imgs/mutated/cover2.gif">
+                </a>
+            </div>
+        </div>
+
+        <div class="grid-item" id="home-book">
+            <div class="thumbnail">
+                <a href="home-book/">
+                    <img class="image" src="imgs/homebook/contents.png">
+                    </a>
+                </div>
+        </div>
+
+        <div class="grid-item" id="editorial">
+            <div class="thumbnail">
+                <a href="editorial-illustration/" >
+                    <img class="image" src="imgs/editorial/carpost.gif">
+            </div>
+        </div>
+
+            <div class="grid-item" id="aiga">
+            <div class="thumbnail">
+                <a href="aiga-first-things-first/" >
+                    <img class="image" src="imgs/manifesto/cover.png">
+                </a>
+            </div>
+        </div>    
+    </div>
+
+
+
+        <div class="grid-item" id="stardew">
+            <div class="thumbnail">
+                <a href="stardew/" >
+                    <img class="image" src="imgs/stardew/cover.png">
+                </a>
+            </div>
+        </div>
+
+        <div class="grid-item" id="macbook">
+            <div class="thumbnail">
+                <a href="macbook/" >
+                    <img class="image" src="imgs/escapism1/escapism1.gif">
+                </a>
+            </div>
+        </div>
 </div>
+</div>
+
+
+<div class="copyright">
+    <span id="copy">All Work On Site © Drithi Kandoor 2025 [drithikandoor@gmail.com]</span>
+</div>
+
 <div class="footer"></div>
 </div>
+
 <script src="main.js"></script>
 </body>
 </html>
