--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
 
 
 
-
+<div class="phone-header"></div>
+</div>
 
 <div class="grid-container-phone">
 
@@ -232,6 +233,7 @@
             <div class="thumbnail">
                 <a href="weaving/" >
                     <img class="image" src="imgs/weaving/sub2.gif">
+                </a>
             </div>
         </div>
 
@@ -240,6 +242,7 @@
                 <a href="chamberlain-coffee/" >
                     <img class= "image" src="imgs/chamberlain/1.png">
                 </a>
+            </div>
         </div>
 
         <div class="grid-item" id="mutated">
@@ -262,6 +265,7 @@
             <div class="thumbnail">
                 <a href="editorial-illustration/" >
                     <img class="image" src="imgs/editorial/carpost.gif">
+                    </a>
             </div>
         </div>
 
@@ -272,9 +276,6 @@
                 </a>
             </div>
         </div>    
-    </div>
-
-
 
         <div class="grid-item" id="stardew">
             <div class="thumbnail">
@@ -290,6 +291,10 @@
                     <img class="image" src="imgs/escapism1/escapism1.gif">
                 </a>
             </div>
+        </div>
+
+        <div class="copyright">
+            <span id="copy2">All Work On Site © Drithi Kandoor 2025 [drithikandoor@gmail.com]</span>
         </div>
 </div>
 </div>
