--- a/index.html
+++ b/index.html
@@ -208,7 +208,6 @@
 
 
 <div class="phone-header"></div>
-</div>
 
 <div class="grid-container-phone">
 
@@ -293,7 +292,7 @@
             </div>
         </div>
 
-        <div class="copyright">
+        <div class="copyright copy2">
             <span id="copy2">All Work On Site © Drithi Kandoor 2025 [drithikandoor@gmail.com]</span>
         </div>
 </div>
