--- a/editorial-illustration/index.html
+++ b/editorial-illustration/index.html
@@ -48,7 +48,7 @@
                 <img src="../imgs/editorial/newspaper.png">
             </div>
             <div class="full">
-                <img src="../imgs/editorial/carpost.gif">
+                <img src="../imgs/editorial/carpost_old.gif">
             </div>
             <div class="full">
                 <div class="two">
