--- a/mutated-odyssey/index.html
+++ b/mutated-odyssey/index.html
@@ -42,7 +42,7 @@
     <div class="grid-column">
         <div class="grid-item scroll">
             <div class="full first">
-              <img src="../imgs/mutated/cover2.gif">
+              <img src="../imgs/mutated/cover2_old.gif">
             </div>
             <div class="full">
                 <img class="flip" src="../imgs/mutated/web.gif">
