edits to info page

--- a/info/index.html
+++ b/info/index.html
@@ -20,19 +20,20 @@
 <div class="phone-header"></div>
 
 <div class="grid-container">
-    <div class="grid-column">
+
+    <div class="grid-column bio-laptop">
         <div class="grid-item">
             <p>
-                What blurs the line between digital & analog? I’m a multidisciplinary graphic designer, coder & artist from Bangalore, based in New York City. 
-                I’m currently a senior in the BFA Communication Design program at Parsons School of Design. My work revolves around <i>exploring how interaction influences narrative.</i>
+                What blurs the line between digital & analog? Drithi Kandoor is a multidisciplinary graphic designer, coder & artist from Bangalore, based in New York City. 
+                Currently a senior in the BFA Communication Design program at Parsons School of Design, her work revolves around exploring how interaction influences narrative.
             </p>
             <p>
-                From a very young age, I’ve had a passion for both science and art. My educational background until coming to college was completely STEM-based. Coding came naturally to me as I took it through high school, while art was purely a hobby. 
-                As for design, I didn’t even know how to use Photoshop until my senior year! Design is my perfect middle ground, allowing me to create <i>innovative & analytic</i> work. 
+                From a very young age, Drithi has had a passion for both science and art.Her educational background until coming to college was completely STEM-based. Coding came naturally to her as I took it through school, while art was purely a hobby. 
+                As for design, she didn’t even know how to use Photoshop until her senior year. Design serves as the perfect middle ground, allowing her to create innovative & analytic work. 
             </p>
             <p>
-                Reflective of my non-conventional advent into design, I’m interested in breaking conventions & creating non-traditional work. When I'm not designing, you can find me either
-                <a href="https://www.instagram.com/drithibyart/" target="_blank">painting</a>, reading, dancing, or napping. *:･ﾟ✧*:･ﾟ
+                Reflective of her non-conventional advent into design, she's interested in breaking conventions & creating non-traditional work. When she's not designing, you can find her
+                <a href="https://www.instagram.com/drithibyart/" target="_blank">painting</a>, reading, dancing, or taking a nap.
             </p>
         </div>
         <div class="grid-item">
@@ -45,7 +46,7 @@
         </div>
     </div>
 
-    <div class="grid-column">
+    <div class="grid-column laptop-exp">
         <div class="grid-item exp">
             <u>ALMA Communications</u><br>
             <span class="loc">New York, USA</span><br>
@@ -83,7 +84,34 @@
             </div>
         </div>
     </div>
-    <div class="copyright">
+    
+    <div class="grid-column laptop-bio">
+        <div class="grid-item">
+            <p>
+                What blurs the line between digital & analog? Drithi Kandoor is a multidisciplinary graphic designer, coder & artist from Bangalore, based in New York City. 
+                Currently a senior in the BFA Communication Design program at Parsons School of Design, her work revolves around exploring how interaction influences narrative.
+            </p>
+            <p>
+                From a very young age, Drithi has had a passion for both science and art.Her educational background until coming to college was completely STEM-based. Coding came naturally to her as I took it through school, while art was purely a hobby. 
+                As for design, she didn’t even know how to use Photoshop until her senior year. Design serves as the perfect middle ground, allowing her to create innovative & analytic work. 
+            </p>
+            <p>
+                Reflective of her non-conventional advent into design, she's interested in breaking conventions & creating non-traditional work. When she's not designing, you can find her
+                <a href="https://www.instagram.com/drithibyart/" target="_blank">painting</a>, reading, dancing, or taking a nap.
+            </p>
+        </div>
+        <div class="grid-item">
+        <p class="contact">
+            <a href="mailto:drithikandoor@gmail.com">drithikandoor@gmail.com</a><br>
+            <a href="https://www.linkedin.com/in/drithi-kandoor/" target="_blank">Linkedin</a> / 
+            <a href="https://www.instagram.com/drithii" target="_blank">Instagram</a> /  
+            <a href="../DrithiKandoor–Resume.pdf" target="_blank">Resume</a><Br>
+        </p>
+        </div>
+    </div>
+
+
+    <div class="copyright copy2">
         <span id="copy2">All Work On Site © Drithi Kandoor 2025 [drithikandoor@gmail.com]</span>
     </div>
 </div>
