--- a/info/index.html
+++ b/info/index.html
@@ -25,7 +25,7 @@
         <div class="grid-item">
             <p>
                 What blurs the line between digital & analog? Drithi Kandoor is a multidisciplinary graphic designer, coder & artist from Bangalore, based in New York City. 
-                Currently a senior in the BFA Communication Design program at Parsons School of Design, her work revolves around exploring how interaction influences narrative.
+                Currently a senior in the BFA Communication Design program at Parsons School of Design, her work revolves around the exploration of how interaction influences narrative.
             </p>
             <p>
                 From a very young age, Drithi has had a passion for both science and art.Her educational background until coming to college was completely STEM-based. Coding came naturally to her as I took it through school, while art was purely a hobby. 
@@ -88,11 +88,11 @@
     <div class="grid-column laptop-bio">
         <div class="grid-item">
             <p>
-                What blurs the line between digital & analog? Drithi Kandoor is a multidisciplinary graphic designer, coder & artist from Bangalore, based in New York City. 
-                Currently a senior in the BFA Communication Design program at Parsons School of Design, her work revolves around exploring how interaction influences narrative.
+                What blurs the line between digital & analog? <br>Drithi Kandoor is a multidisciplinary graphic designer, coder & artist from Bangalore, based in New York City. 
+                Currently a senior in the BFA Communication Design program at Parsons School of Design, her work revolves around the exploration of how interaction influences narrative.
             </p>
             <p>
-                From a very young age, Drithi has had a passion for both science and art.Her educational background until coming to college was completely STEM-based. Coding came naturally to her as I took it through school, while art was purely a hobby. 
+                From a very young age, Drithi has had a passion for both science & art. Her educational background until coming to college was completely STEM-based. Coding came naturally to her through school, while art was purely a hobby. 
                 As for design, she didn’t even know how to use Photoshop until her senior year. Design serves as the perfect middle ground, allowing her to create innovative & analytic work. 
             </p>
             <p>
