--- a/info/index.html
+++ b/info/index.html
@@ -28,8 +28,7 @@
                 Currently a senior in the BFA Communication Design program at Parsons School of Design, her work revolves around the exploration of how interaction influences narrative.
             </p>
             <p>
-                From a very young age, Drithi has had a passion for both science and art.Her educational background until coming to college was completely STEM-based. Coding came naturally to her as I took it through school, while art was purely a hobby. 
-                As for design, she didn’t even know how to use Photoshop until her senior year. Design serves as the perfect middle ground, allowing her to create innovative & analytic work. 
+                From a very young age, Drithi has had a passion for both science and art. Her educational background until coming to college was completely STEM-based while art was purely a hobby. Design serves as the perfect middle ground, allowing her to create innovative & analytic work. 
             </p>
             <p>
                 Reflective of her non-conventional advent into design, she's interested in breaking conventions & creating non-traditional work. When she's not designing, you can find her
