--- a/undefined/index.html
+++ b/undefined/index.html
@@ -26,7 +26,7 @@
         [undefined]: a book made through code
     </span></a><br>
         <div class="subinfo">
-        <span class="subtitle">(indesign scripting) (book design) (computational design)</span>
+        <span class="subtitle">(indesign scripting) (book design)<br>(computational design)</span>
         <div class="time">
             In → Fall 2024<br>
             Under → Joe Marianek & Dinah Fried
