--- a/weaving/index.html
+++ b/weaving/index.html
@@ -24,7 +24,7 @@
         <div class="grid-item information">
        <a href=""><span class="title">The Met Community Driven Design</span></a><br>
         <div class="subinfo">
-        <span class="subtitle">(creative coding) (type design) (branding) (web design) (exhibition design)</span>
+        <span class="subtitle">(creative coding) (type design) (branding) <br>(web design) (exhibition design)</span>
         <div class="time">
             In → Spring 2024<br>
             Under → Talia Cotton
