--- a/undefined/index.html
+++ b/undefined/index.html
@@ -49,6 +49,9 @@
                 <img src="../imgs/undefined/undefined.gif">
             </div>
             <div class="full">
+                <img src="../imgs/undefined/stack.jpg">
+            </div>
+            <div class="full">
                 <img src="../imgs/undefined/contents.jpg">
             </div>
             <div class="full">
