--- a/info/index.html
+++ b/info/index.html
@@ -24,7 +24,7 @@
     <div class="grid-column bio-laptop">
         <div class="grid-item">
             <p>
-                What blurs the line between digital & analog? Drithi Kandoor is a multidisciplinary graphic designer, coder & artist from Bangalore, based in New York City. 
+                What blurs the line between digital & analog?<br>Drithi Kandoor is a multidisciplinary graphic designer, coder & artist from Bangalore, based in New York City. 
                 Currently a senior in the BFA Communication Design program at Parsons School of Design, her work revolves around the exploration of how interaction influences narrative.
             </p>
             <p>
