--- a/info/index.html
+++ b/info/index.html
@@ -59,11 +59,10 @@
             <br>
             <u>Parsons School of Design</u><br>
             <span class="loc">New York, USA</span><br>
+            <i>(present)</i><br>
+            Research Assistant, Kelly Walters<br>
             <i>(2024)</i><br>
-            Research Assistant to Juliette Cezzar<br>
-            <br>
-            <u>Parsons School of Design</u><br>
-            <span class="loc">New York, USA</span><br>
+            Research Assistant, Juliette Cezzar<br>
             <i>(2023–2024)</i><br>
             Coding Tutor<br>
             <br>
