--- a/undefined/index.html
+++ b/undefined/index.html
@@ -67,6 +67,12 @@
                 </div>
             </div>
             <div class="full">
+                <img src="../imgs/undefined/spread.JPG">
+            </div>
+            <div class="full">
+                <img src="../imgs/undefined/vellum.JPG">
+            </div>
+            <div class="full">
                 <img src="../imgs/undefined/img.jpg">
             </div>
         </div>
