--- a/undefined/index.html
+++ b/undefined/index.html
@@ -33,7 +33,8 @@
         </div>
         <span class="anchor">7.5 x 12.25 inches</span><br>
         <p>In an age where AI tools are used to minimize our errors yet can result in a dangerous rabbit hole of new errors, [undefined] is an 80-page book designed almost entirely <i>through code</i>. It is meant to redefine the role of error in learning and innovation, challenging its traditional perception 
-            as something to be avoided. Through this project, I forced myself to learn an unfamiliar technological tool (Indesign scripting using basil.js) without relying on any AI to fix my mistakes but instead <i>allowing digital errors</i> to experiment and push boundaries in creating something <i>physical</i>. 
+            as something to be avoided. Through this project, I forced myself to learn an unfamiliar technological tool (Indesign scripting using basil.js) without relying on any AI to fix my mistakes but instead <i>allowing digital errors</i> to experiment and push boundaries in creating something <i>physical</i>.
+            Each time the code is run, a different iteration of the book is produced!
         </p>
          </div>
         </div>
