--- a/info/index.html
+++ b/info/index.html
@@ -47,6 +47,11 @@
 
     <div class="grid-column laptop-exp">
         <div class="grid-item exp">
+            <u>Pentagram</u><br>
+            <span class="loc">New York, USA</span><br>
+            <i>(2025–present)</i><br>
+            Graphic Design Intern<br>
+            <br>
             <u>ALMA Communications</u><br>
             <span class="loc">New York, USA</span><br>
             <i>(2024–present)</i><br>
