--- a/info/index.html
+++ b/info/index.html
@@ -25,7 +25,7 @@
         <div class="grid-item">
             <p>
                 What blurs the line between digital & analog?<br>Drithi Kandoor is a multidisciplinary graphic designer, coder & artist from Bangalore, based in New York City. 
-                Currently a senior in the BFA Communication Design program at Parsons School of Design, her work revolves around the exploration of how interaction influences narrative.
+                She recently graduated from the BFA Communication Design program at Parsons School of Design. Her work largely explores how interaction influences narrative.
             </p>
             <p>
                 From a very young age, Drithi has had a passion for both science & art. Her educational background until coming to college was completely STEM-based while art was purely a hobby. Design serves as the perfect middle ground, allowing her to create innovative & analytic work. 
@@ -49,22 +49,22 @@
         <div class="grid-item exp">
             <u>Pentagram</u><br>
             <span class="loc">New York, USA</span><br>
-            <i>(2025–present)</i><br>
+            <i>(present)</i><br>
             Graphic Design Intern<br>
             <br>
             <u>ALMA Communications</u><br>
             <span class="loc">New York, USA</span><br>
-            <i>(2024–present)</i><br>
+            <i>(2024–2025)</i><br>
             Associate Designer<br>
             <br>
             <u>AIGA@TNS</u><br>
             <span class="loc">New York, USA</span><br>
-            <i>(2023–present)</i><br>
+            <i>(2023–2025)</i><br>
             Design Director<br>
             <br>
             <u>Parsons School of Design</u><br>
             <span class="loc">New York, USA</span><br>
-            <i>(present)</i><br>
+            <i>(2025)</i><br>
             Research Assistant, Kelly Walters<br>
             <i>(2024)</i><br>
             Research Assistant, Juliette Cezzar<br>
@@ -92,7 +92,7 @@
         <div class="grid-item">
             <p>
                 What blurs the line between digital & analog? <br>Drithi Kandoor is a multidisciplinary graphic designer, coder & artist from Bangalore, based in New York City. 
-                Currently a senior in the BFA Communication Design program at Parsons School of Design, her work revolves around the exploration of how interaction influences narrative.
+                She recently graduated from the BFA Communication Design program at Parsons School of Design. Her work largely explores how interaction influences narrative.
             </p>
             <p>
                 From a very young age, Drithi has had a passion for both science & art. Her educational background until coming to college was completely STEM-based while art was purely a hobby. Design serves as the perfect middle ground, allowing her to create innovative & analytic work. 
