--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <div class="grid-item" id="to-revisit">
             <div class="thumbnail">
                    
-                    <img class="image" src="imgs/revisit/revisit_phone.gif">
+                    <img class="image" src="imgs/revisit/p2.png">
                  
             </div>
         </div>
