--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <div class="grid-item" id="blumenhaus">
             <div class="thumbnail">
                 
-                    <img class="image" src="imgs/blumenhaus/webcropped2_phone.gif">
+                    <img class="image" src="imgs/blumenhaus/tote.png">
                 
             </div>
         </div>
