--- a/info/index.html
+++ b/info/index.html
@@ -24,7 +24,10 @@
     <div class="grid-column bio-laptop">
         <div class="grid-item">
             <p>
-                What blurs the line between digital & analog?<br>Drithi Kandoor is a multidisciplinary graphic designer, coder & artist from Bangalore, based in New York City. 
+                What blurs the line between digital & analog?<br>
+            </p>
+            <p>
+                <a href="https://www.instagram.com/drithii" target="_blank">Drithi Kandoor</a> is a multidisciplinary graphic designer, coder & artist from Bangalore, now based in New York City. 
                 She recently graduated from the BFA Communication Design program at Parsons School of Design. Her work largely explores how interaction influences narrative.
             </p>
             <p>
@@ -86,14 +89,14 @@
     <div class="grid-column laptop-bio">
         <div class="grid-item">
             <p>
-                What blurs the line between digital & analog? <br>Drithi Kandoor is a multidisciplinary graphic designer, coder & artist from Bangalore, based in New York City. 
-                She recently graduated from the BFA Communication Design program at Parsons School of Design. Her work largely explores how interaction influences narrative.
+                <a href="https://www.instagram.com/drithii" target="_blank">Drithi Kandoor</a> is a multidisciplinary graphic designer, coder & artist from Bangalore, now based in New York City. 
+                She recently graduated from the BFA Communication Design program at Parsons School of Design and is currently interning at Pentagram.
             </p>
+            <br>
             <p>
-                From a very young age, Drithi has had a passion for both science & art. Her educational background until coming to college was completely STEM-based while art was purely a hobby. Design serves as the perfect middle ground, allowing her to create innovative & analytic work. 
-            </p>
-            <p>
-                Reflective of her non-conventional advent into design, she's interested in breaking conventions & creating non-traditional work. When she's not designing, you can find her
+                She's interested in the intersection of digital & analog, with work that often centers around code, interaction, illustration, and typography. 
+                Passionate about breaking conventions, she hopes to create non-traditional work that blends design with art, science, and technology.
+                When she's not designing, you can find her
                 <a href="https://www.instagram.com/drithibyart/" target="_blank">painting</a>, reading, dancing, or taking a nap.
             </p>
         </div>
