--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="grid-item" id="blumenhaus">
             <div class="thumbnail">
                 
-                    <img class="image" src="home-page-imgs/blumenhaus-phone.gif">
+                    <img class="image" src="home-page-imgs/blumenhaus-phone.png">
                 
             </div>
         </div>
