--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <div class="grid-item" id="to-revisit">
             <div class="thumbnail">
                    
-                    <img class="image" src="home-page-imgs/revisit-phone.gif">
+                    <img class="image" src="home-page-imgs/revisit-phone.png">
                  
             </div>
         </div>
