--- a/home-book/index.html
+++ b/home-book/index.html
@@ -63,6 +63,6 @@
     <span id="copy">All Work On Site © Drithi Kandoor 2025 [drithikandoor@gmail.com]</span>
 </div>
 <div class="footer"></div>
-<script src="main.js"></script>
+<script src="../main2.js"></script>
 </body>
 </html>
