--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@
             <div class="grid-column">
                 <div class="grid-item" id="undefined">
                     <div class="thumbnail">
-                            <img class="image loading" data-src="home-page-imgs/undefined-phone.jpg">
+                            <img class="image loading" data-src="home-page-imgs/undefined-phone.png">
                         </a>
                     </div>
                 </div>
         
                 <div class="grid-item" id="to-revisit">
                     <div class="thumbnail">
-                            <img class="image loading" data-src="home-page-imgs/revisit-phone.png">
+                            <img class="image loading" data-src="home-page-imgs/revisit-phone.gif">
                         </a>
                     </div>
                 </div>
