--- a/info/index.html
+++ b/info/index.html
@@ -32,7 +32,7 @@
                 She's interested in the intersection of digital & analog, with work that often centers around code, interaction, illustration, and typography. 
                 Passionate about breaking conventions, she hopes to create non-traditional work that blends design with art, science, and technology.
                 When she's not designing, you can find her
-                <a href="https://www.instagram.com/drithibyart/" target="_blank">painting</a>, reading, dancing, or taking a nap.
+                <a href="https://www.instagram.com/drithibyart/" target="_blank">painting</a>,  <a href="https://literal.club/drithi" target="_blank">reading</a>, dancing, or taking a nap.
             </p>
         </div>
         <div class="grid-item">
@@ -94,7 +94,7 @@
                 She's interested in the intersection of digital & analog, with work that often centers around code, interaction, illustration, and typography. 
                 Passionate about breaking conventions, she hopes to create non-traditional work that blends design with art, science, and technology.
                 When she's not designing, you can find her
-                <a href="https://www.instagram.com/drithibyart/" target="_blank">painting</a>, reading, dancing, or taking a nap.
+                <a href="https://www.instagram.com/drithibyart/" target="_blank">painting</a>, <a href="https://literal.club/drithi" target="_blank">reading</a>, dancing, or taking a nap.
             </p>
         </div>
         <div class="grid-item">
