--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 <span class="circle">
                                 <span class="text">
                                 Stardew Typeface<br>
-                                <span class="skill">type design, creative coding, digital design, graphic design</span>
+                                <span class="skill">type design, creative coding, web design</span>
                                 </span>
                                 </span>
                             </div>
