--- a/info/index.html
+++ b/info/index.html
@@ -25,7 +25,7 @@
         <div class="grid-item">
             <p>
                 <a href="https://www.instagram.com/drithii" target="_blank">Drithi Kandoor</a> is a multidisciplinary graphic designer, coder & artist from Bangalore, now based in New York City. 
-                She recently graduated from the BFA Communication Design program at Parsons School of Design and is currently designing at Pentagram.
+                She recently graduated from the BFA Communication Design program at Parsons School of Design and is designing at Pentagram.
             </p>
             <br>
             <p>
@@ -50,7 +50,7 @@
             <u>Pentagram</u><br>
             <span class="loc">New York, USA</span><br>
             <i>(present)</i><br>
-            Graphic Design Intern<br>
+            Designer<br>
             <br>
             <u>ALMA Communications</u><br>
             <span class="loc">New York, USA</span><br>
@@ -87,7 +87,7 @@
         <div class="grid-item">
             <p>
                 <a href="https://www.instagram.com/drithii" target="_blank">Drithi Kandoor</a> is a multidisciplinary graphic designer, coder & artist from Bangalore, now based in New York City. 
-                She recently graduated from the BFA Communication Design program at Parsons School of Design and is currently designing at Pentagram.
+                She recently graduated from the BFA Communication Design program at Parsons School of Design and is designing at Pentagram.
             </p>
             <br>
             <p>
