--- a/info/index.html
+++ b/info/index.html
@@ -25,7 +25,7 @@
         <div class="grid-item">
             <p>
                 <a href="https://www.instagram.com/drithii" target="_blank">Drithi Kandoor</a> is a multidisciplinary graphic designer, coder & artist from Bangalore, now based in New York City. 
-                She recently graduated from the BFA Communication Design program at Parsons School of Design and is designing at Pentagram.
+                She recently graduated from Parsons School of Design with a BFA in Communication Design and is now designing at Pentagram.
             </p>
             <br>
             <p>
@@ -87,7 +87,7 @@
         <div class="grid-item">
             <p>
                 <a href="https://www.instagram.com/drithii" target="_blank">Drithi Kandoor</a> is a multidisciplinary graphic designer, coder & artist from Bangalore, now based in New York City. 
-                She recently graduated from the BFA Communication Design program at Parsons School of Design and is designing at Pentagram.
+                She recently graduated from Parsons School of Design with a BFA in Communication Design and is now designing at Pentagram.
             </p>
             <br>
             <p>
