--- a/info/index.html
+++ b/info/index.html
@@ -24,7 +24,7 @@
     <div class="grid-column bio-laptop">
         <div class="grid-item">
             <p>
-                <a href="https://www.instagram.com/drithii" target="_blank">Drithi Kandoor</a> is a multidisciplinary graphic designer, coder & artist from Bangalore, now based in New York City. 
+                Drithi Kandoor is a multidisciplinary graphic designer, coder & artist from Bangalore, now based in New York City. 
                 She recently graduated from Parsons School of Design with a BFA in Communication Design and is now designing at Pentagram.
             </p>
             <br>
